--- a/spa/src/app/shared/toolbar-nav/toolbar-nav.component.scss
+++ b/spa/src/app/shared/toolbar-nav/toolbar-nav.component.scss
@@ -18,7 +18,7 @@
 /**
  * Extra small, small
  */
-@media (max-width: 839px) {
+@media (max-width: 1199px) {
 
     /**
      * Default state
@@ -50,33 +50,18 @@
 }
 
 /**
- * Large Tablet +
- * https://material.io/design/layout/responsive-layout-grid.html#breakpoints
+ * HCA specific breakpoint
  */
-@media screen and (min-width: 840px) {
-
-    // Nav - show
-    :host, toolbar-nav {
-        display: flex;
-        flex-direction: row;
-        left: 182px;
-        position: absolute;
-    }
-}
-
-/**
- * Medium +
- * https://material.io/design/layout/responsive-layout-grid.html#breakpoints
- */
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1200px) {
 
     /* Nav - centered */
     :host, toolbar-nav {
-        left: 50%;
-        -webkit-transform: translateX(-50%);
-        -moz-transform: translateX(-50%);
-        -ms-transform: translateX(-50%);
-        -o-transform: translateX(-50%);
-        transform: translateX(-50%);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        left: 0;
+        margin: 0 auto;
+        position: absolute;
+        width: 100vw;
     }
 }
